# chaotic-attractors

./: .gitignore  README.md  chaotic_attractors.py  pyproject.toml  pytest.ini
chaotic_attractors/: __init__.py  __main__.py  core.py  equations.py  search.py
tests/: test_core.py  test_equations.py  test_search.py
